# template_python_project

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_dummy.py
