[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
 "pandas>=2.3.0",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "jupytext>=1.16.7",
  "pre-commit>=4.0.1",
  "pytest>=8.4.1",
]

docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.47",
  "mkdocstrings[python]>=0.27.0",
]
lint = ["mypy>=1.13.0", "ruff>=0.9.0"]
test = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-durations>=1.3.1",
  "pytest-randomly>=3.16.0",
  "pytest-xdist>=3.6.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "I",
  "E",
  "W",
  "C90",
  "N",
  "D",
  "DOC201",
  "DOC202",
  "DOC402",
  "DOC403",
  "DOC501",
  "DOC502",
  "ERA",
  "ANN",
  "FBT",
  "LOG",
  "INP",
  "RET",
  "SLF",
  "ARG",
  "PL",
]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
extend-ignore-names = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**.py" = ["ANN201"]
"!src/**.py" = ["D", "DOC"]
"!{src,tests,python}/**.py" = ["INP"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
markers = ["slow: mark test as slow."]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "NUMBER",
]
filterwarnings = [
  "ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown",
]
